Update README.md
Adds various version info.